@@ -1,17 +1,15 @@
 #! /bin/sh -vx
-# $Id: pdfimage.test 45809 2017-11-15 00:36:56Z karl $
-# Copyright 2017 Karl Berry <tex-live@tug.org>#
+# $Id: pdfimage.test 804 2018-05-17 22:29:15Z karl $
+# Copyright 2017-2018 Karl Berry <tex-live@tug.org>#
 # Copyright 2013 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
 
-TEXMFCNF=$srcdir/../kpathsea
-TEXINPUTS=$srcdir/pdftexdir/tests:$srcdir/tests
-TEXFORMATS=.
+TEXMFCNF=$srcdir/../kpathsea; export TEXMFCNF
+TEXINPUTS=$srcdir/pdftexdir/tests:$srcdir/tests; export TEXINPUTS
+TEXFORMATS=.; export TEXFORMATS
 
-export TEXMFCNF TEXINPUTS TEXFORMATS
+./pdftex -ini -interaction=batchmode pdfimage </dev/null || exit 1
 
-./pdftex -ini pdfimage || exit 1
-
-./pdftex -fmt=pdfimage pdfimage || exit 1
+./pdftex -fmt=pdfimage -interaction=batchmode pdfimage </dev/null || exit 1
 
 exit 0
