@@ -1,10 +1,11 @@
 #! /bin/sh -vx
-# $Id: pdftex.test 45809 2017-11-15 00:36:56Z karl $
-# Copyright 2017 Karl Berry <tex-live@tug.org>
+# $Id: pdftex.test 804 2018-05-17 22:29:15Z karl $
+# Copyright 2017-2018 Karl Berry <tex-live@tug.org>
 # Copyright 2010 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
 
-# Not really a test, just making sure the program executes.
+# Make sure the program executes.
 
-./pdftex -version || exit 1
-
+./pdftex --version || exit 1
+./pdftex --help || exit 1
+exit 0
